# DiarioOpenGL

./: CMakeLists.txt  LICENSE.md  README.md  main.cpp
include/: camera.h  engine.h  input_manager.h  light_object.h  mesh.h  model.h  object.h  object_manager.h  renderer.h  renderer_manager.h  scene.h  shader.h  shader_type.h  window_manager.h
libs/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/glm/: CMakeLists.txt
libs/stb/: CMakeLists.txt  LICENSE.md  LICENSE.txt
libs/stb/include/stb/: stb_image.h
models/metal_plane/: metal_plane.mtl
shaders/: cube_fragment.glsl  cube_vertex.glsl  fragment_cube.glsl  fragment_shader.glsl  model_fragment.glsl  model_vertex.glsl  vertex_cube.glsl  vertex_shader.glsl
src/: camera.cpp  engine.cpp  input_manager.cpp  light_object.cpp  mesh.cpp  model.cpp  object.cpp  object_manager.cpp  renderer.cpp  renderer_manager.cpp  scene.cpp  shader.cpp  window_manager.cpp
